# LivaNota

./: .gitignore  livanota.cxx  livanota.hxx  makefile  readme.md
code/: LivaNota.cpp  LivaNota.hpp
docs/: readme.md
envi/: CMakeLists.txt
